--- a/docs/alpha_version/A02_alpha_report.tex
+++ b/docs/alpha_version/A02_alpha_report.tex
@@ -2,7 +2,7 @@
 \usepackage{dmasproject}
 % if you need additional LaTeX packages, add them here
 
-\title{Your Project Title Goes Here}
+\title{Modeling civil violence}
 % sort your names alphabetically by last name
 \author{
   First Author (s123456)
@@ -11,9 +11,9 @@
   \\
   Third Author (s345678)
   \\
-  Fourth Author (s456789)
+  Abhishek Ramanathapura Satyanarayana (s4304675)
 }
-\date{Alpha version, September 2020} % change this accordingly
+\date{Alpha version, September 2021} % change this accordingly
 
 \begin{document}
 
