test commit 2 from overleaf

--- a/docs/alpha_version/A02_alpha_report.tex
+++ b/docs/alpha_version/A02_alpha_report.tex
@@ -9,7 +9,7 @@
   \\
   Second Author (s234567)
   \\
-  Third Author (s345678)
+  Niels Burgler (s345678)
   \\
   Abhishek Ramanathapura Satyanarayana (s4304675)
 }
