test commit 4 from overleaf

--- a/docs/alpha_version/A02_alpha_report.tex
+++ b/docs/alpha_version/A02_alpha_report.tex
@@ -5,7 +5,7 @@
 \title{Modeling civil violence}
 % sort your names alphabetically by last name
 \author{
-  First Author (s123456)
+  Sam Reswinraj Abraham (s123456)
   \\
   Amit Bharti (s234567)
   \\
