added alpha version report

--- a/docs/alpha_version/references.bib
+++ b/docs/alpha_version/references.bib
@@ -62,3 +62,86 @@
   title = {Schelling's model of segregation},
   url = {https://en.wikipedia.org/w/index.php?title=Schelling%27s_model_of_segregation&oldid=976837642},
 }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%OUR CITATIONS%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{epstein2002modeling,
+    title={Modeling civil violence: An agent-based computational approach},
+    author={Epstein, Joshua M},
+    journal={Proceedings of the National Academy of Sciences},
+    volume={99},
+    number={suppl 3},
+    pages={7243--7250},
+    year={2002},
+    publisher={National Acad Sciences},
+    doi = {10.1073/pnas.092080199},
+}
+
+@article{stateofartreview,
+    author = {Lemos, Carlos and Coelho, Helder and Lopes, Rui Jorge},
+    year = {2013},
+    month = {01},
+    pages = {124-138},
+    title = {Agent-based modeling of social conflict, civil violence and revolution: State-of-the-art-review and further prospects},
+    volume = {1113},
+    journal = {CEUR Workshop Proceedings},
+    url = {http://ceur-ws.org/Vol-1113/paper10.pdf}
+}
+
+@book{thecrowd,
+    author = {Bon, G.L.},
+    title = {The Crowd: A Study of the Popular Mind},
+    publisher = {Dover Publications 1895, trans},
+    year = {2002},
+    url = {https://www.files.ethz.ch/isn/125518/1414_LeBon.pdf},
+}
+
+@misc{phdthesisfaris,
+    author = {Faris, David},
+    title = {Revolutions Without Revolutionaries? Social Media Networks and Regime Response in Egypt},
+    note = {PhD thesis},
+    institution = {University of Pennsylvania},
+    year = {2010},
+    url = {https://repository.upenn.edu/edissertations/116/},
+}
+
+@inproceedings{Rheingold2002SmartMT,
+    title = {Smart Mobs: The Next Social Revolution},
+    author = {H. Rheingold},
+    year = 2002,
+    doi = {10.1177/073953290302400414},
+}
+
+@article{twitterarticle,
+    author = {Huijser, Henk and Little, Janine},
+    year = {2011},
+    month = {01},
+    title = {From Masterchef to the Arab Spring via Wikileaks: Social Media and Political Change},
+    url = {http://eprints.usq.edu.au/21377/1/Little_Huijser_PV.pdf},
+}
+
+@misc{enwiki:usprotest,
+    author = {Wikipedia},
+    title = {2021 United States Capitol attack --- {Wikipedia}{,} The Free Encyclopedia},
+    url = {https://en.wikipedia.org/w/index.php?title=2021_United_States_Capitol_attack&oldid=1045864284},
+    date = {2021-09-23},
+}
+
+@misc{enwiki:hongkongprotest,
+    author = {Wikipedia},
+    title = {2019–2020 Hong Kong protests --- {Wikipedia}{,} The Free Encyclopedia},
+    url = {https://en.wikipedia.org/w/index.php?title=2019%E2%80%932020_Hong_Kong_protests&oldid=1045601033},
+    date = {2021-09-23},
+}
+
+@misc{enwiki:indiafarmprotest,
+    author = {Wikipedia},
+    title = {2020–2021 Indian farmers' protest --- {Wikipedia}{,} The Free Encyclopedia},
+    url = {https://en.wikipedia.org/w/index.php?title=2020%E2%80%932021_Indian_farmers%27_protest&oldid=1043407008},
+    date = {2021-09-23},
+}
+
+
+
